<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cargosTabla">


    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/id" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"


        />


    <Button
        android:id="@+id/btn_eliminar1"
        android:layout_width="103dp"
        android:layout_height="82dp"
        android:onClick="onClick"
        android:text="@string/eliminar"
        android:textSize="10sp" />

    <Button
        android:id="@+id/btn_editar1"
        android:layout_width="103dp"
        android:layout_height="82dp"
        android:onClick="onClickEditar"
        android:text="@string/editar"
        android:textSize="10sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">


            <TableLayout
                android:id="@+id/tabla"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />


        </HorizontalScrollView>


    </ScrollView>





</LinearLayout>